Changelog:

unRIAD Universal Custom Theme V0.5:
- auto backup and restore user input

unRIAD Universal Custom Theme V0.4:
- added color restore and script remove function


unRIAD Universal Custom Theme < V0.3:

- Alpha stadium and several changes and fixes